Updated all the project settings now the Java 12 preview features have been removed.